--- a/index.html
+++ b/index.html
@@ -4,12 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A minha primeira página</title>
+    <title>Página muito sexy</title>
 </head>
 <body>
     <h1>
-        Olá eu sou uma página bueda fixe.
+        Romeu Neto
     </h1>
     <img src="https://c.tenor.com/5yqYZonKQuYAAAAS/chupapi-chu.gif">
+    <p>Olá o meu nome é Romeu!</p>
+    <p><b>Adoro desenhar, criar experiências e jogar jogos de cartas.</b> Estou sempre interessado em narrativas e gosto de analisar e entender o processo criativo de toda a media que me rodeia.</p>
+    <p>Embora por vezes tenha um tom sério nao sou de todo.</p>
+    <img src="https://media.tenor.com/gXlfRKhHFLEAAAAS/moist-critical-penguinz0.gif" alt="">
+
 </body>
 </html>
